--- a/Fitoday/Cells/BodyProportionsHeaderTableViewCell.xib
+++ b/Fitoday/Cells/BodyProportionsHeaderTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="603" id="KGk-i7-Jjw" customClass="BodyProportionsHeaderTableViewCell" customModule="Fitoday" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="603" id="KGk-i7-Jjw" customClass="BodyProportionsHeaderTableViewCell" customModule="Fitody" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="622" height="603"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -27,23 +27,23 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pfr-Y7-vrP" userLabel="CellParentView">
-                        <rect key="frame" x="5" y="5" width="612" height="593"/>
+                        <rect key="frame" x="5" y="5" width="612" height="581"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4xF-K4-bZI">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4xF-K4-bZI" userLabel="TopBarView">
                                 <rect key="frame" x="20" y="20" width="572" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RQu-ca-bRk">
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RQu-ca-bRk">
                                         <rect key="frame" x="0.0" y="14" width="16" height="22"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="IconBackArrowDark"/>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Proportions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKZ-9R-eaJ">
-                                        <rect key="frame" x="36" y="13.5" width="183" height="23"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Body Proportions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKZ-9R-eaJ">
+                                        <rect key="frame" x="36" y="14" width="498" height="22.5"/>
                                         <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="20"/>
                                         <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="highlightedColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4a-NZ-flk">
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4a-NZ-flk">
                                         <rect key="frame" x="554" y="14" width="18" height="22"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="DeviceSettingsIcon"/>
@@ -57,6 +57,7 @@
                                     <constraint firstAttribute="trailing" secondItem="Z4a-NZ-flk" secondAttribute="trailing" id="UkL-y5-ig0"/>
                                     <constraint firstItem="RQu-ca-bRk" firstAttribute="centerY" secondItem="4xF-K4-bZI" secondAttribute="centerY" id="ebj-NB-gyn"/>
                                     <constraint firstItem="sKZ-9R-eaJ" firstAttribute="centerY" secondItem="4xF-K4-bZI" secondAttribute="centerY" id="jSC-ap-KT3"/>
+                                    <constraint firstItem="Z4a-NZ-flk" firstAttribute="leading" secondItem="sKZ-9R-eaJ" secondAttribute="trailing" constant="20" id="kQq-TE-UL5"/>
                                     <constraint firstItem="Z4a-NZ-flk" firstAttribute="centerY" secondItem="4xF-K4-bZI" secondAttribute="centerY" id="rAa-eb-Zpz"/>
                                 </constraints>
                             </view>
@@ -78,30 +79,34 @@
                                     <constraint firstItem="GnS-M6-j6f" firstAttribute="centerY" secondItem="7wg-lM-HcT" secondAttribute="centerY" id="z7Q-ig-jac"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BodyProportion" translatesAutoresizingMaskIntoConstraints="NO" id="AIf-nd-fKD">
-                                <rect key="frame" x="248.5" y="180" width="115" height="307"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="EC6-o0-xhL">
+                                <rect key="frame" x="10" y="145" width="592" height="384"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BxU-Ww-Uzb">
+                                        <rect key="frame" x="0.0" y="0.0" width="177.5" height="384"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BodyProportion" translatesAutoresizingMaskIntoConstraints="NO" id="AIf-nd-fKD">
+                                        <rect key="frame" x="202.5" y="0.0" width="187" height="384"/>
+                                    </imageView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ow4-Ys-eb4">
+                                        <rect key="frame" x="414.5" y="0.0" width="177.5" height="384"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="335" id="CoZ-U2-ssX"/>
+                                        </constraints>
+                                    </tableView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="115" id="MgK-GT-t27"/>
+                                    <constraint firstItem="BxU-Ww-Uzb" firstAttribute="height" secondItem="EC6-o0-xhL" secondAttribute="height" id="MdZ-Us-PRY"/>
+                                    <constraint firstItem="Ow4-Ys-eb4" firstAttribute="width" secondItem="EC6-o0-xhL" secondAttribute="width" multiplier="0.3" id="TYx-sT-wGN"/>
+                                    <constraint firstItem="AIf-nd-fKD" firstAttribute="height" secondItem="EC6-o0-xhL" secondAttribute="height" id="cnV-P3-9nd"/>
+                                    <constraint firstItem="BxU-Ww-Uzb" firstAttribute="width" secondItem="EC6-o0-xhL" secondAttribute="width" multiplier="0.3" id="sHL-bH-iZh"/>
+                                    <constraint firstItem="Ow4-Ys-eb4" firstAttribute="height" secondItem="EC6-o0-xhL" secondAttribute="height" id="ttw-MG-Xtr"/>
                                 </constraints>
-                            </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BxU-Ww-Uzb">
-                                <rect key="frame" x="123.5" y="150" width="100" height="335"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="czJ-gB-2AQ"/>
-                                    <constraint firstAttribute="height" constant="335" id="h7a-Sk-PBz"/>
-                                </constraints>
-                            </tableView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ow4-Ys-eb4">
-                                <rect key="frame" x="388.5" y="150" width="100" height="335"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="335" id="CoZ-U2-ssX"/>
-                                    <constraint firstAttribute="width" constant="100" id="hpE-rJ-u12"/>
-                                </constraints>
-                            </tableView>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Fl-1l-tIe">
-                                <rect key="frame" x="20" y="571" width="572" height="2"/>
+                                <rect key="frame" x="20" y="559" width="572" height="2"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -113,16 +118,14 @@
                         <constraints>
                             <constraint firstItem="7wg-lM-HcT" firstAttribute="leading" secondItem="pfr-Y7-vrP" secondAttribute="leadingMargin" constant="40" id="47c-UN-J0w"/>
                             <constraint firstItem="4xF-K4-bZI" firstAttribute="top" secondItem="pfr-Y7-vrP" secondAttribute="top" constant="20" id="6Vc-o9-Z1C"/>
-                            <constraint firstItem="BxU-Ww-Uzb" firstAttribute="top" secondItem="7wg-lM-HcT" secondAttribute="bottom" constant="25" id="Aai-fU-ycB"/>
                             <constraint firstItem="7Fl-1l-tIe" firstAttribute="leading" secondItem="pfr-Y7-vrP" secondAttribute="leading" constant="20" id="BHB-5D-sUm"/>
-                            <constraint firstItem="AIf-nd-fKD" firstAttribute="centerX" secondItem="pfr-Y7-vrP" secondAttribute="centerX" id="Ck1-G4-sSJ"/>
-                            <constraint firstItem="AIf-nd-fKD" firstAttribute="leading" secondItem="BxU-Ww-Uzb" secondAttribute="trailing" constant="25" id="H5q-A8-YnJ"/>
-                            <constraint firstItem="Ow4-Ys-eb4" firstAttribute="leading" secondItem="AIf-nd-fKD" secondAttribute="trailing" constant="25" id="TR2-il-aVq"/>
+                            <constraint firstItem="EC6-o0-xhL" firstAttribute="leading" secondItem="pfr-Y7-vrP" secondAttribute="leading" constant="10" id="E7O-iH-rSu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7wg-lM-HcT" secondAttribute="trailing" constant="40" id="Z3e-7c-Ard"/>
                             <constraint firstAttribute="trailing" secondItem="7Fl-1l-tIe" secondAttribute="trailing" constant="20" id="aAV-gz-8c1"/>
                             <constraint firstItem="4xF-K4-bZI" firstAttribute="leading" secondItem="pfr-Y7-vrP" secondAttribute="leading" constant="20" id="dFE-TN-Dcv"/>
-                            <constraint firstItem="AIf-nd-fKD" firstAttribute="top" secondItem="7wg-lM-HcT" secondAttribute="bottom" constant="55" id="gQt-3O-ykX"/>
-                            <constraint firstItem="Ow4-Ys-eb4" firstAttribute="top" secondItem="7wg-lM-HcT" secondAttribute="bottom" constant="25" id="oDx-ix-irq"/>
+                            <constraint firstItem="EC6-o0-xhL" firstAttribute="top" secondItem="7wg-lM-HcT" secondAttribute="bottom" constant="20" id="i3B-2i-Eo6"/>
+                            <constraint firstItem="7Fl-1l-tIe" firstAttribute="top" secondItem="EC6-o0-xhL" secondAttribute="bottom" constant="30" id="nPt-VT-Kov"/>
+                            <constraint firstAttribute="trailing" secondItem="EC6-o0-xhL" secondAttribute="trailing" constant="10" id="oQv-rK-JgG"/>
                             <constraint firstAttribute="trailing" secondItem="4xF-K4-bZI" secondAttribute="trailing" constant="20" id="p6J-n8-1yt"/>
                             <constraint firstAttribute="bottom" secondItem="7Fl-1l-tIe" secondAttribute="bottom" constant="20" id="prc-PU-JRJ"/>
                             <constraint firstItem="7wg-lM-HcT" firstAttribute="top" secondItem="4xF-K4-bZI" secondAttribute="bottom" constant="5" id="xdq-2s-GiE"/>
