--- a/Fitoday/Cells/DeviceBannerCollectionViewCell.xib
+++ b/Fitoday/Cells/DeviceBannerCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DeviceBannerCollectionViewCell" customModule="Fitoday" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DeviceBannerCollectionViewCell" customModule="Fitody" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="543" height="202"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -25,49 +25,93 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wxp-2H-pOy">
                         <rect key="frame" x="0.0" y="0.0" width="543" height="202"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SmartTapeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2ct-XX-7h3">
-                                <rect key="frame" x="60" y="51" width="100" height="100"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XCY-s7-gSM">
+                                <rect key="frame" x="0.0" y="0.0" width="548" height="202"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="10d-cB-yk9">
+                                        <rect key="frame" x="0.0" y="0.0" width="219" height="202"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SmartTapeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2ct-XX-7h3">
+                                                <rect key="frame" x="33" y="30.5" width="153.5" height="141"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="2ct-XX-7h3" firstAttribute="width" secondItem="10d-cB-yk9" secondAttribute="width" multiplier="0.7" id="LBj-pp-qea"/>
+                                            <constraint firstItem="2ct-XX-7h3" firstAttribute="centerX" secondItem="10d-cB-yk9" secondAttribute="centerX" id="gWG-mI-698"/>
+                                            <constraint firstItem="2ct-XX-7h3" firstAttribute="centerY" secondItem="10d-cB-yk9" secondAttribute="centerY" id="sGw-XS-VKE"/>
+                                            <constraint firstItem="2ct-XX-7h3" firstAttribute="height" secondItem="10d-cB-yk9" secondAttribute="height" multiplier="0.7" id="zE8-DA-vvq"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6a9-J8-Wch">
+                                        <rect key="frame" x="219" y="0.0" width="329" height="202"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r6a-vQ-AbN">
+                                                <rect key="frame" x="0.0" y="61" width="309" height="80"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fitody Smart Scale" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="8Xf-1d-6Ls">
+                                                        <rect key="frame" x="90.5" y="20" width="128.5" height="14.5"/>
+                                                        <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
+                                                        <color key="textColor" red="0.93725490199999995" green="0.25882352939999997" blue="0.43529411759999997" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optimize Your Fitness Performance With Precise Measuring &amp; Tracking" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="4" translatesAutoresizingMaskIntoConstraints="NO" id="GOB-9s-gdN">
+                                                        <rect key="frame" x="0.0" y="44.5" width="309" height="9"/>
+                                                        <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="8"/>
+                                                        <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="8Xf-1d-6Ls" firstAttribute="centerX" secondItem="r6a-vQ-AbN" secondAttribute="centerX" id="3Mg-QS-CQA"/>
+                                                    <constraint firstItem="GOB-9s-gdN" firstAttribute="centerX" secondItem="r6a-vQ-AbN" secondAttribute="centerX" id="AGc-mY-mb3"/>
+                                                    <constraint firstItem="8Xf-1d-6Ls" firstAttribute="top" secondItem="r6a-vQ-AbN" secondAttribute="top" constant="20" id="Hrj-1n-bZd"/>
+                                                    <constraint firstAttribute="height" constant="80" id="Jb5-Rx-S6B"/>
+                                                    <constraint firstAttribute="trailing" secondItem="GOB-9s-gdN" secondAttribute="trailing" id="Nlo-6K-Lml"/>
+                                                    <constraint firstItem="GOB-9s-gdN" firstAttribute="leading" secondItem="r6a-vQ-AbN" secondAttribute="leading" id="NoS-2f-hC0"/>
+                                                    <constraint firstItem="GOB-9s-gdN" firstAttribute="top" secondItem="8Xf-1d-6Ls" secondAttribute="bottom" constant="10" id="sIw-zI-lZR"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="r6a-vQ-AbN" firstAttribute="centerY" secondItem="6a9-J8-Wch" secondAttribute="centerY" id="1dk-Ag-9vn"/>
+                                            <constraint firstAttribute="trailing" secondItem="r6a-vQ-AbN" secondAttribute="trailing" constant="20" id="AaK-Ui-qQg"/>
+                                            <constraint firstItem="r6a-vQ-AbN" firstAttribute="leading" secondItem="6a9-J8-Wch" secondAttribute="leading" id="ShB-hQ-hsl"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="6hg-3M-do3"/>
-                                    <constraint firstAttribute="height" constant="100" id="M1q-Fz-49O"/>
+                                    <constraint firstItem="6a9-J8-Wch" firstAttribute="width" secondItem="XCY-s7-gSM" secondAttribute="width" multiplier="0.6" id="DPS-R7-gYr"/>
+                                    <constraint firstItem="10d-cB-yk9" firstAttribute="height" secondItem="XCY-s7-gSM" secondAttribute="height" id="UKk-my-Je7"/>
+                                    <constraint firstItem="6a9-J8-Wch" firstAttribute="height" secondItem="XCY-s7-gSM" secondAttribute="height" id="n0g-1h-joB"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fitody Smart Scale" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Xf-1d-6Ls">
-                                <rect key="frame" x="220" y="70" width="129" height="15"/>
-                                <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
-                                <color key="textColor" red="0.93725490199999995" green="0.25882352939999997" blue="0.43529411759999997" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optimize Your Fitness Performance With Precise Measuring &amp; Tracking" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOB-9s-gdN">
-                                <rect key="frame" x="184.5" y="95" width="200" height="18"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="o9g-ma-00l"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="8"/>
-                                <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.98823529409999999" green="0.83137254900000002" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="2ct-XX-7h3" firstAttribute="leading" secondItem="Wxp-2H-pOy" secondAttribute="leading" constant="60" id="i1d-cB-YFb"/>
-                            <constraint firstItem="8Xf-1d-6Ls" firstAttribute="centerX" secondItem="GOB-9s-gdN" secondAttribute="centerX" id="jmi-nO-VZA"/>
-                            <constraint firstItem="8Xf-1d-6Ls" firstAttribute="leading" secondItem="2ct-XX-7h3" secondAttribute="trailing" constant="60" id="oFf-W9-tlz"/>
-                            <constraint firstItem="GOB-9s-gdN" firstAttribute="top" secondItem="8Xf-1d-6Ls" secondAttribute="bottom" constant="10" id="pT5-6g-1uB"/>
-                            <constraint firstItem="2ct-XX-7h3" firstAttribute="centerY" secondItem="Wxp-2H-pOy" secondAttribute="centerY" id="q7s-gW-BuV"/>
-                            <constraint firstItem="8Xf-1d-6Ls" firstAttribute="top" secondItem="Wxp-2H-pOy" secondAttribute="top" constant="70" id="zpq-5F-6Sp"/>
+                            <constraint firstItem="XCY-s7-gSM" firstAttribute="top" secondItem="Wxp-2H-pOy" secondAttribute="top" id="Cxl-wb-67q"/>
+                            <constraint firstAttribute="trailing" secondItem="XCY-s7-gSM" secondAttribute="trailing" constant="-5" id="VVB-77-7PI"/>
+                            <constraint firstAttribute="bottom" secondItem="XCY-s7-gSM" secondAttribute="bottom" id="eSJ-3u-uCy"/>
+                            <constraint firstItem="XCY-s7-gSM" firstAttribute="leading" secondItem="Wxp-2H-pOy" secondAttribute="leading" id="fki-ca-uL8"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="Wxp-2H-pOy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9BY-90-UPa"/>
-                <constraint firstItem="Wxp-2H-pOy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="DLh-12-4ed"/>
-                <constraint firstAttribute="trailing" secondItem="Wxp-2H-pOy" secondAttribute="trailing" id="N6V-hL-Ur9"/>
-                <constraint firstAttribute="bottom" secondItem="Wxp-2H-pOy" secondAttribute="bottom" id="QgH-lF-9Pa"/>
+                <constraint firstItem="Wxp-2H-pOy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="12j-LK-huB"/>
+                <constraint firstAttribute="trailing" secondItem="Wxp-2H-pOy" secondAttribute="trailing" id="5Ih-OG-5qg"/>
+                <constraint firstAttribute="bottom" secondItem="Wxp-2H-pOy" secondAttribute="bottom" id="LDD-7q-J3x"/>
+                <constraint firstItem="Wxp-2H-pOy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hLf-Vv-5pb"/>
             </constraints>
             <size key="customSize" width="543" height="202"/>
+            <connections>
+                <outlet property="deviceDescription" destination="GOB-9s-gdN" id="Tqo-Iz-ci8"/>
+                <outlet property="deviceIcon" destination="2ct-XX-7h3" id="CMc-qh-aud"/>
+                <outlet property="deviceName" destination="8Xf-1d-6Ls" id="oJS-Ki-a6e"/>
+            </connections>
             <point key="canvasLocation" x="225.36231884057972" y="68.973214285714278"/>
         </collectionViewCell>
     </objects>
