--- a/Fitoday/Cells/UserProfileTableViewCell.xib
+++ b/Fitoday/Cells/UserProfileTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -20,18 +20,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="UserProfileTableViewCell" customModule="Fitoday" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="UserProfileTableViewCell" customModule="Fitody" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="460" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="460" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="teF-E2-bWs">
-                        <rect key="frame" x="5" y="5" width="460" height="140"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="teF-E2-bWs">
+                        <rect key="frame" x="5" y="5" width="381" height="140"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yna-Ji-ax6">
-                                <rect key="frame" x="0.0" y="0.0" width="460" height="40"/>
+                                <rect key="frame" x="0.0" y="0.0" width="381" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5E1-el-ILq" userLabel="lblProfileCellTitle">
                                         <rect key="frame" x="20" y="20" width="97" height="20.5"/>
@@ -48,16 +48,16 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p2i-Zv-fDY" userLabel="DataView">
-                                <rect key="frame" x="5" y="49.5" width="450" height="80"/>
+                                <rect key="frame" x="5" y="49.5" width="371" height="80"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PNz-TX-dSY" userLabel="firstItemStack">
-                                        <rect key="frame" x="0.0" y="0.0" width="259" height="80"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PNz-TX-dSY" userLabel="firstItemStack">
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="80"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ITD-85-yJt" userLabel="FirstTitleView">
-                                                <rect key="frame" x="0.0" y="0.0" width="259" height="20"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="180" height="20"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qFX-Zo-oRr">
-                                                        <rect key="frame" x="15" y="3.5" width="76" height="13"/>
+                                                        <rect key="frame" x="15" y="3.5" width="68.5" height="13"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GenderIcon" translatesAutoresizingMaskIntoConstraints="NO" id="91E-kj-fP1">
                                                                 <rect key="frame" x="0.0" y="0.0" width="13" height="13"/>
@@ -66,9 +66,9 @@
                                                                     <constraint firstAttribute="height" constant="13" id="fQY-8F-MuM"/>
                                                                 </constraints>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUQ-i5-fdi">
-                                                                <rect key="frame" x="23" y="0.0" width="53" height="13"/>
-                                                                <fontDescription key="fontDescription" name="Comfortaa-Light" family="Comfortaa" pointSize="14"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.90000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="wUQ-i5-fdi">
+                                                                <rect key="frame" x="23" y="0.0" width="45.5" height="13"/>
+                                                                <fontDescription key="fontDescription" name="Comfortaa-Light" family="Comfortaa" pointSize="13"/>
                                                                 <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -83,7 +83,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c9x-VZ-30k" userLabel="ProfileItemFirstValueContainer">
-                                                <rect key="frame" x="0.0" y="25" width="259" height="55"/>
+                                                <rect key="frame" x="0.0" y="30" width="180" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Female" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tqe-TL-kqU">
                                                         <rect key="frame" x="25" y="16" width="59.5" height="18"/>
@@ -96,7 +96,6 @@
                                                 <constraints>
                                                     <constraint firstItem="Tqe-TL-kqU" firstAttribute="leading" secondItem="c9x-VZ-30k" secondAttribute="leading" constant="25" id="MaE-Ut-h1O"/>
                                                     <constraint firstItem="Tqe-TL-kqU" firstAttribute="top" secondItem="c9x-VZ-30k" secondAttribute="top" constant="16" id="c78-ZM-0pI"/>
-                                                    <constraint firstAttribute="height" constant="55" id="pwH-NM-y2P"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -105,22 +104,25 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="c9x-VZ-30k" firstAttribute="height" secondItem="PNz-TX-dSY" secondAttribute="height" multiplier="0.625" id="OO3-yq-mOu"/>
+                                        </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TJa-Tk-SrY" userLabel="CenterSeparator">
-                                        <rect key="frame" x="264" y="0.0" width="1" height="80"/>
+                                        <rect key="frame" x="185" y="0.0" width="1" height="80"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="tIT-8p-DEw"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aPo-VC-0c0" userLabel="secondItemStack">
-                                        <rect key="frame" x="270" y="0.0" width="180" height="80"/>
+                                        <rect key="frame" x="191" y="0.0" width="180" height="80"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xTt-hR-Tqj" userLabel="SecondTitleView">
                                                 <rect key="frame" x="0.0" y="0.0" width="180" height="20"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="f0P-Hm-Psp">
-                                                        <rect key="frame" x="15" y="3.5" width="85" height="13"/>
+                                                        <rect key="frame" x="15" y="3.5" width="80.5" height="13"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BirthdayIcon" translatesAutoresizingMaskIntoConstraints="NO" id="v01-Qe-bQ8">
                                                                 <rect key="frame" x="0.0" y="0.0" width="13" height="13"/>
@@ -129,9 +131,9 @@
                                                                     <constraint firstAttribute="width" constant="13" id="I2c-Sb-vUh"/>
                                                                 </constraints>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birthday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCT-BG-EES">
-                                                                <rect key="frame" x="23" y="0.0" width="62" height="13"/>
-                                                                <fontDescription key="fontDescription" name="Comfortaa-Light" family="Comfortaa" pointSize="14"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birthday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="QCT-BG-EES">
+                                                                <rect key="frame" x="23" y="0.0" width="57.5" height="13"/>
+                                                                <fontDescription key="fontDescription" name="Comfortaa-Light" family="Comfortaa" pointSize="13"/>
                                                                 <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -147,7 +149,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cBr-Lj-8yJ" userLabel="ProfileItemSecondValue">
-                                                <rect key="frame" x="0.0" y="25" width="180" height="55"/>
+                                                <rect key="frame" x="0.0" y="28" width="180" height="52"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sep, 4, 1990" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gk3-L2-7ay">
                                                         <rect key="frame" x="25" y="16" width="91.5" height="18"/>
@@ -161,7 +163,6 @@
                                                     <constraint firstAttribute="width" constant="180" id="Jfl-yQ-88I"/>
                                                     <constraint firstItem="gk3-L2-7ay" firstAttribute="top" secondItem="cBr-Lj-8yJ" secondAttribute="top" constant="16" id="WIo-xu-Scg"/>
                                                     <constraint firstItem="gk3-L2-7ay" firstAttribute="leading" secondItem="cBr-Lj-8yJ" secondAttribute="leading" constant="25" id="dqb-2T-9GC"/>
-                                                    <constraint firstAttribute="height" constant="55" id="hwv-tG-EHb"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -170,6 +171,9 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="cBr-Lj-8yJ" firstAttribute="height" secondItem="aPo-VC-0c0" secondAttribute="height" multiplier="0.65" id="Cii-9e-dVV"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -189,7 +193,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v3X-1y-BPf" userLabel="viewProfileCellSeparator">
-                                <rect key="frame" x="15" y="139" width="430" height="1"/>
+                                <rect key="frame" x="15" y="139" width="351" height="1"/>
                                 <color key="backgroundColor" red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="0.26078351759752688" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="FPc-BT-3wQ"/>
