--- a/Fitoday/Cells/WeightManagementBottomTableViewCell.xib
+++ b/Fitoday/Cells/WeightManagementBottomTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="594" id="KGk-i7-Jjw" customClass="WeightManagementBottomTableViewCell" customModule="Fitoday" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="594" id="KGk-i7-Jjw" customClass="WeightManagementBottomTableViewCell" customModule="Fitody" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="588" height="487"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -94,21 +94,21 @@
                         <color key="textColor" red="0.63921568630000003" green="0.63921568630000003" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Kg to go to meet your goals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFy-MI-0jg">
-                        <rect key="frame" x="325" y="45" width="140" height="11"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Kg to go to meet your goals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="SFy-MI-0jg">
+                        <rect key="frame" x="325" y="45" width="227" height="11"/>
                         <fontDescription key="fontDescription" name="Comfortaa-Light" family="Comfortaa" pointSize="9"/>
                         <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YmR-uj-aSZ" userLabel="GoalProgressSeparator">
-                        <rect key="frame" x="40" y="114" width="508" height="2"/>
+                        <rect key="frame" x="36" y="114" width="516" height="2"/>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="TVj-Co-wAR"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYW-Zk-cbr">
-                        <rect key="frame" x="335" y="144" width="87" height="29"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYW-Zk-cbr">
+                        <rect key="frame" x="335" y="144" width="217" height="29"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" title="Edit Goal">
                             <fontDescription key="titleFontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
@@ -118,8 +118,8 @@
                             <action selector="onEditGoalPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="uNh-gs-HBH"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Prt-OO-HEI">
-                        <rect key="frame" x="128" y="144" width="125" height="29"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Prt-OO-HEI">
+                        <rect key="frame" x="36" y="144" width="217" height="29"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" title="Update Weight">
                             <fontDescription key="titleFontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
@@ -160,7 +160,7 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mph-ah-lmH" userLabel="WeightButtonBottomSeparator">
-                        <rect key="frame" x="40" y="201" width="508" height="2"/>
+                        <rect key="frame" x="36" y="201" width="516" height="2"/>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="an0-eQ-5hN"/>
@@ -189,8 +189,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fak-fq-HEZ">
-                        <rect key="frame" x="248" y="364.5" width="92.5" height="67.5"/>
-                        <state key="normal" title="Button"/>
+                        <rect key="frame" x="36" y="364.5" width="516" height="67.5"/>
+                        <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="Shop Now">
+                            <color key="titleColor" red="0.93725490199999995" green="0.25882352939999997" blue="0.43529411759999997" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
                         <buttonConfiguration key="configuration" style="plain" title="Shop Now">
                             <fontDescription key="titleFontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
                             <color key="baseForegroundColor" red="0.93725490199999995" green="0.25882352939999997" blue="0.43529411759999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -198,11 +202,14 @@
                     </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="fak-fq-HEZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="5KK-Qw-soq"/>
                     <constraint firstItem="Mph-ah-lmH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="5iC-EI-eew"/>
                     <constraint firstItem="YmR-uj-aSZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="7y9-Yx-2pa"/>
                     <constraint firstItem="Mph-ah-lmH" firstAttribute="top" secondItem="Prt-OO-HEI" secondAttribute="bottom" constant="28" id="8A2-WQ-rYE"/>
                     <constraint firstItem="SFy-MI-0jg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="45" id="9YC-PX-WIz"/>
                     <constraint firstItem="UF9-M7-RWr" firstAttribute="top" secondItem="YmR-uj-aSZ" secondAttribute="bottom" constant="20" id="9o9-ya-BB1"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="gYW-Zk-cbr" secondAttribute="trailing" constant="20" id="Ce5-b8-EN1"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fak-fq-HEZ" secondAttribute="trailing" constant="20" id="E4M-Tv-jIW"/>
                     <constraint firstItem="fak-fq-HEZ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="IwX-lW-pNv"/>
                     <constraint firstItem="xd9-3r-EYv" firstAttribute="top" secondItem="Mph-ah-lmH" secondAttribute="bottom" constant="10" id="JkK-HZ-r6a"/>
                     <constraint firstItem="2Db-as-VWZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="JpL-3f-XHY"/>
@@ -220,6 +227,7 @@
                     <constraint firstItem="fak-fq-HEZ" firstAttribute="top" secondItem="2Tg-4e-m3G" secondAttribute="bottom" constant="5" id="kMe-Qt-bb0"/>
                     <constraint firstItem="2Tg-4e-m3G" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mIp-pk-l5a"/>
                     <constraint firstItem="YmR-uj-aSZ" firstAttribute="top" secondItem="J6o-BE-Ree" secondAttribute="bottom" constant="24" id="mNz-K9-gDZ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="SFy-MI-0jg" secondAttribute="trailing" constant="20" id="n1S-9b-cTH"/>
                     <constraint firstItem="UF9-M7-RWr" firstAttribute="leading" secondItem="Prt-OO-HEI" secondAttribute="trailing" constant="40" id="nbY-of-5V0"/>
                     <constraint firstItem="Prt-OO-HEI" firstAttribute="top" secondItem="YmR-uj-aSZ" secondAttribute="bottom" constant="28" id="pMS-jP-mLK"/>
                     <constraint firstItem="huj-pF-1UZ" firstAttribute="top" secondItem="fak-fq-HEZ" secondAttribute="bottom" constant="10" id="pg8-li-9ge"/>
@@ -232,9 +240,15 @@
                     <constraint firstItem="huj-pF-1UZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="xxI-FB-Tn4"/>
                     <constraint firstItem="rDe-cc-MbF" firstAttribute="top" secondItem="xd9-3r-EYv" secondAttribute="bottom" constant="5" id="yvl-9K-6QW"/>
                     <constraint firstItem="J6o-BE-Ree" firstAttribute="leading" secondItem="2Db-as-VWZ" secondAttribute="trailing" constant="80" id="zM7-8Z-qL7"/>
+                    <constraint firstItem="Prt-OO-HEI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="zgb-LJ-8Au"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="btnEditGoal" destination="gYW-Zk-cbr" id="Pxb-qd-6y8"/>
+                <outlet property="btnShopNow" destination="fak-fq-HEZ" id="evG-BG-7cs"/>
+                <outlet property="btnUpdateGoal" destination="Prt-OO-HEI" id="8ex-mH-Nf4"/>
+            </connections>
             <point key="canvasLocation" x="204.34782608695653" y="193.19196428571428"/>
         </tableViewCell>
     </objects>
