--- a/Fitoday/ViewControllers/IntroPagerViewController.xib
+++ b/Fitoday/ViewControllers/IntroPagerViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,7 +14,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IntroPagerViewController" customModule="Fitoday" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IntroPagerViewController" customModule="Fitody" customModuleProvider="target">
             <connections>
                 <outlet property="introImageView" destination="7Oz-za-thy" id="RiU-31-GNV"/>
                 <outlet property="introInfoLabel" destination="adn-5z-peg" id="sps-MN-ReT"/>
@@ -32,11 +32,11 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x5q-iD-CK6" userLabel="IntroView">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IntroLogoEnjoy" translatesAutoresizingMaskIntoConstraints="NO" id="7Oz-za-thy">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="IntroLogoEnjoy" translatesAutoresizingMaskIntoConstraints="NO" id="7Oz-za-thy">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="765.5"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Ahead of Your Fitness Goals With Smart Fitness Devices" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="adn-5z-peg">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Ahead of Your Fitness Goals With Smart Fitness Devices " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="adn-5z-peg">
                                     <rect key="frame" x="20" y="770.5" width="374" height="42.5"/>
                                     <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="19"/>
                                     <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
@@ -49,9 +49,10 @@
                                 <constraint firstItem="7Oz-za-thy" firstAttribute="leading" secondItem="x5q-iD-CK6" secondAttribute="leading" id="8me-cd-X7Z"/>
                                 <constraint firstAttribute="trailing" secondItem="adn-5z-peg" secondAttribute="trailing" constant="20" id="D1Y-Yy-JUz"/>
                                 <constraint firstAttribute="trailing" secondItem="7Oz-za-thy" secondAttribute="trailing" id="DKS-JM-50T"/>
+                                <constraint firstItem="adn-5z-peg" firstAttribute="width" secondItem="x5q-iD-CK6" secondAttribute="width" multiplier="0.903382" id="MTd-fe-O7H"/>
                                 <constraint firstItem="adn-5z-peg" firstAttribute="leading" secondItem="x5q-iD-CK6" secondAttribute="leading" constant="20" id="Ogd-GC-ZbP"/>
                                 <constraint firstAttribute="bottom" secondItem="adn-5z-peg" secondAttribute="bottom" constant="5" id="Uc9-il-FRA"/>
-                                <constraint firstAttribute="bottom" secondItem="7Oz-za-thy" secondAttribute="bottom" constant="10" id="pcU-nV-vaO"/>
+                                <constraint firstItem="adn-5z-peg" firstAttribute="top" secondItem="7Oz-za-thy" secondAttribute="bottom" constant="5" id="YbS-pC-v49"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -76,7 +77,7 @@
         </view>
     </objects>
     <resources>
-        <image name="IntroLogoEnjoy" width="428" height="403"/>
+        <image name="IntroLogoEnjoy" width="1600" height="1600"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
