--- a/Fitoday/ViewControllers/ShopDevicesViewController.xib
+++ b/Fitoday/ViewControllers/ShopDevicesViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,9 +14,10 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopDevicesViewController" customModule="Fitoday" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopDevicesViewController" customModule="Fitody" customModuleProvider="target">
             <connections>
                 <outlet property="bannerDevicesCollectionView" destination="RCz-uc-tRa" id="saa-rB-8FC"/>
+                <outlet property="bannerDevicesPageControl" destination="txV-Qi-95W" id="Bg8-jc-o2R"/>
                 <outlet property="connectedDevicesCollectionView" destination="Nkl-OT-IPl" id="onP-zI-GIA"/>
                 <outlet property="shopDevicesTableView" destination="qBA-zA-wIE" id="1re-Eb-5QK"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -28,27 +29,27 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bzf-Bf-UUA">
-                    <rect key="frame" x="0.0" y="44" width="414" height="752"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="626.5"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXF-1B-vvx" userLabel="DevicesTitleBar">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="52.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfl-sl-8I1">
-                                    <rect key="frame" x="20" y="15.5" width="16" height="22"/>
+                                    <rect key="frame" x="20" y="11" width="16" height="22"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" image="IconBackArrowDark"/>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Utl-8b-MKy">
-                                    <rect key="frame" x="117" y="6.5" width="180" height="40"/>
+                                    <rect key="frame" x="117" y="2" width="180" height="40"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devices" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEr-wc-xJO">
-                                            <rect key="frame" x="42" y="0.0" width="96" height="40"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEr-wc-xJO">
+                                            <rect key="frame" x="48.5" y="0.0" width="83" height="40"/>
                                             <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="24"/>
                                             <color key="textColor" red="0.0" green="0.1215686275" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DeviceTitleIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nm9-a4-cIw">
-                                            <rect key="frame" x="12" y="7.5" width="18" height="25"/>
+                                            <rect key="frame" x="18.5" y="7.5" width="18" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="6yt-zV-VaM"/>
                                                 <constraint firstAttribute="width" constant="18" id="Kby-wi-e6i"/>
@@ -67,7 +68,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YC2-Fx-4S2">
-                                    <rect key="frame" x="376" y="15.5" width="18" height="22"/>
+                                    <rect key="frame" x="376" y="11" width="18" height="22"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" image="DeviceSettingsIcon"/>
                                 </button>
@@ -83,7 +84,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nXf-H7-ZcL" userLabel="DevicesBannerView">
-                            <rect key="frame" x="0.0" y="52.5" width="414" height="188"/>
+                            <rect key="frame" x="0.0" y="44" width="414" height="188"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bLS-03-kba">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="188"/>
@@ -101,6 +102,8 @@
                                         <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="txV-Qi-95W">
                                             <rect key="frame" x="0.0" y="162" width="414" height="26"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="currentPageIndicatorTintColor" systemColor="labelColor"/>
                                         </pageControl>
                                     </subviews>
                                 </stackView>
@@ -118,10 +121,27 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ydk-OC-nKQ" userLabel="ConnectedDevicesView">
-                            <rect key="frame" x="0.0" y="240.5" width="414" height="135.5"/>
+                            <rect key="frame" x="0.0" y="232" width="414" height="144"/>
                             <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v1R-pm-aL6" userLabel="ShopDevicesTitleContainer">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Device" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aa3-W7-a1I">
+                                            <rect key="frame" x="167" y="7.5" width="80.5" height="14.5"/>
+                                            <fontDescription key="fontDescription" name="Comfortaa-Bold" family="Comfortaa" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="0HR-jZ-iHL"/>
+                                        <constraint firstItem="aa3-W7-a1I" firstAttribute="centerY" secondItem="v1R-pm-aL6" secondAttribute="centerY" id="JTG-v5-Qau"/>
+                                        <constraint firstItem="aa3-W7-a1I" firstAttribute="centerX" secondItem="v1R-pm-aL6" secondAttribute="centerX" id="XLg-ZP-WU2"/>
+                                    </constraints>
+                                </view>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Nkl-OT-IPl">
-                                    <rect key="frame" x="10" y="0.0" width="394" height="135.5"/>
+                                    <rect key="frame" x="10" y="31" width="394" height="113"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fJf-wE-N9b">
                                         <size key="itemSize" width="128" height="128"/>
@@ -133,14 +153,17 @@
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
+                                <constraint firstItem="Nkl-OT-IPl" firstAttribute="top" secondItem="v1R-pm-aL6" secondAttribute="bottom" constant="1" id="7Ds-1m-9pV"/>
+                                <constraint firstItem="v1R-pm-aL6" firstAttribute="leading" secondItem="ydk-OC-nKQ" secondAttribute="leading" id="Mx1-CH-ekR"/>
                                 <constraint firstItem="Nkl-OT-IPl" firstAttribute="leading" secondItem="ydk-OC-nKQ" secondAttribute="leading" constant="10" id="PNF-hM-hGk"/>
                                 <constraint firstAttribute="trailing" secondItem="Nkl-OT-IPl" secondAttribute="trailing" constant="10" id="YZV-Uu-EZW"/>
+                                <constraint firstItem="v1R-pm-aL6" firstAttribute="top" secondItem="ydk-OC-nKQ" secondAttribute="top" id="feQ-X0-vFY"/>
                                 <constraint firstAttribute="bottom" secondItem="Nkl-OT-IPl" secondAttribute="bottom" id="j2D-0E-o3m"/>
-                                <constraint firstItem="Nkl-OT-IPl" firstAttribute="top" secondItem="ydk-OC-nKQ" secondAttribute="top" id="nSY-Ux-8jI"/>
+                                <constraint firstAttribute="trailing" secondItem="v1R-pm-aL6" secondAttribute="trailing" id="tzX-k7-s4u"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bgV-wU-o7V" userLabel="ShopDevicesView">
-                            <rect key="frame" x="0.0" y="376" width="414" height="376"/>
+                            <rect key="frame" x="0.0" y="376" width="414" height="250.5"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ykp-Eg-dYx" userLabel="ShopDevicesTitleContainer">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
@@ -160,7 +183,7 @@
                                     </constraints>
                                 </view>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qBA-zA-wIE">
-                                    <rect key="frame" x="8" y="40" width="398" height="331"/>
+                                    <rect key="frame" x="8" y="40" width="398" height="205.5"/>
                                     <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </tableView>
                             </subviews>
@@ -177,9 +200,9 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="ydk-OC-nKQ" firstAttribute="height" secondItem="bzf-Bf-UUA" secondAttribute="height" multiplier="0.18" id="FqR-jy-Nts"/>
+                        <constraint firstItem="ydk-OC-nKQ" firstAttribute="height" secondItem="bzf-Bf-UUA" secondAttribute="height" multiplier="0.23" id="FqR-jy-Nts"/>
                         <constraint firstItem="ZXF-1B-vvx" firstAttribute="height" secondItem="bzf-Bf-UUA" secondAttribute="height" multiplier="0.07" id="eRz-Zx-k3O"/>
-                        <constraint firstItem="nXf-H7-ZcL" firstAttribute="height" secondItem="bzf-Bf-UUA" secondAttribute="height" multiplier="0.25" id="k0w-mh-2fy"/>
+                        <constraint firstItem="nXf-H7-ZcL" firstAttribute="height" secondItem="bzf-Bf-UUA" secondAttribute="height" multiplier="0.3" id="k0w-mh-2fy"/>
                     </constraints>
                 </stackView>
             </subviews>
@@ -198,6 +221,9 @@
         <image name="DeviceSettingsIcon" width="18" height="19"/>
         <image name="DeviceTitleIcon" width="14" height="22"/>
         <image name="IconBackArrowDark" width="16" height="14.5"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
