--- a/Fitoday/ViewControllers/UserProfileViewController.xib
+++ b/Fitoday/ViewControllers/UserProfileViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,7 +14,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserProfileViewController" customModule="Fitoday" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserProfileViewController" customModule="Fitody" customModuleProvider="target">
             <connections>
                 <outlet property="userProfileTableView" destination="cAZ-cY-52J" id="RMB-5X-tcO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -54,7 +54,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F2x-lu-MEA" userLabel="userProfilePictureView">
                             <rect key="frame" x="139.5" y="60" width="135" height="135"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePictureDefaultPlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="ytP-ET-2Q3">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfileIconPlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="ytP-ET-2Q3">
                                     <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="135" id="Gfj-Uj-e9Z"/>
@@ -132,7 +132,7 @@
         <image name="CameraIcon" width="16" height="13"/>
         <image name="IconBackArrowDark" width="16" height="14.5"/>
         <image name="MoreOptions" width="5" height="23"/>
-        <image name="ProfilePictureDefaultPlaceHolder" width="1200" height="1200"/>
+        <image name="ProfileIconPlaceHolder" width="168" height="160"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
